tests/toy/neg/001607_mutation.toylang
program a = { while a do else; } .
